1.JVM参数更新 2.文档补充